chore: 测试类调整